--- a/README.Rmd
+++ b/README.Rmd
@@ -178,42 +178,44 @@ seecol(pal_unikn_pref)
 
 ### Partial color palettes
 
-When only a subset of a color palette are needed, the `seecol()` and `usecol()` functions provide a reasonable subset of a known color palette:
+When only a subset of a color palette are needed, the `seecol()` and `usecol()` functions provide a reasonable subset of a known ** unikn** color palette: 
 
 ```{r pal_n, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # All color palettes: ----- 
 seecol(n = 4)
 
 # Only pal_seeblau: ----- 
-seecol(pal_seeblau, n = 4)
+# seecol(pal_seeblau, n = 4)
 ```
 
-### Extending and creating color palettes
 
-The `seecol` function provides color gradients based on given colors or color palettes. 
-This serves 2 main functions: 
+### Changing and creating color palettes
 
-1. Extending existing color palettes (to arbitrary lengths):
+The `usecol` and `seecol` functions provide some generic options for manipulating and showing color gradients based on given colors or color palettes. This serves 2 main functions: 
+
+1. Reducing or extending existing color palettes (to arbitrary lengths).  
+2. Mixing and merging colors and color palettes into new color palettes. 
+
+Here are some examples of these functions in action: 
+
+- Extending or reducing an existing color palette:
 
 ```{r col_scale_1, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
-# Extending color palettes: ----- 
 seecol(pal_unikn, n = 21)  
-seecol(pal_seeblau, n = 8)
+# seecol(pal_seeblau, n = 8)  # provides a subset of "good" colors
 ```
 
-2. Combining colors to create new color palettes:
+Note that reducing an **unikn** color palette selects a suitable subset of its colors, rather than just truncating the scale. 
 
-New color palettes of arbitrary length can be created by combining colors (from **unikn** or base R) 
-and the desired resolution of the color gradient (as an integer argument): 
+- Combining colors to create new color palettes (of arbitrary length): 
 
 ```{r col_scale_2, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining colors: ----- 
 seecol(c(Seeblau, "white", Pinky), 11) 
-seecol(c(Karpfenblau, Seeblau, "gold"), 10) 
+# seecol(c(Karpfenblau, Seeblau, "gold"), 10) 
 ```
 
-3. Mixing and merging colors and color palettes to create new color palettes. 
-For best results, consider combining existing color palettes and individual colors into new color palettes: 
+- Mixing and merging colors and color palettes into new color palettes: 
 
 ```{r col_scale_3, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining color palettes (and colors): ----- 
