--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -163,7 +163,9 @@ Specifying a value for the `n` argument of `seecol` an `usecol` allows you to
 * specify a subset of colors and compare these subsets for different palettes for `n` _smaller_ than the length of the color palette. 
 * extend a color palette and compare different palettes for `n` _greater_ than the length of the color palette. 
 
-Finally, passing a vector of colors and/or color palettes allows you creating and viewing your own palettes. 
+Passing a vector of colors and/or color palettes allows you creating and viewing your own palettes. 
+
+Finally, specifying a value for `alpha` allows to control the transparency of the color palette(s) with higher values for `alpha` corresponding to higher transparency (lower opacity). 
 
 ### Selecting subsets
 
@@ -180,6 +182,8 @@ Importantly, when using pre-defined color palettes of `unikn` but a value of `n`
 barplot(1/sqrt(1:2), col = usecol(pal_seeblau, n = 2))
 barplot(1/sqrt(1:3), col = usecol(pal_seeblau, n = 3))
 ```
+
+
 
 ### Extending color palettes
 
@@ -224,6 +228,23 @@ dat <- matrix(sample(5:10, size = 10, replace = TRUE), ncol = 5)
 barplot(dat, beside = TRUE, col = my_pair)
 ```
 
+
+### Controlling transparency
+
+Displaying colors for opacity of 0.5:
+
+```{r transparency1_pal, fig.width = 7, fig.height = 6, fig.align = 'center', collapse = TRUE}
+seecol(pal_unikn, alpha = 0.5)
+```
+
+This also works for displays of multiple palettes: 
+
+```{r transparency_all, fig.width = 6, fig.height = 3, fig.align = 'center'}
+seecol("grad", alpha = 0.4)
+```
+
+
+
 ### Comparing custom palettes 
 
 Sometimes you may want to compare a palette you created to your other or the existing palettes.  Therefore, advanced users can also use `seecol` for displaying and comparing different custom palettes. Seecol will output a _comparison_ of the inputs if you specify the `pal` argument as a list of colors or color palettes:
@@ -259,7 +280,7 @@ The following examples illustrate how plotting functions in R can use the **unik
 
 ```{r demo_scatterplot, eval = TRUE, fig.width = 6, fig.height = 4, fig.align = 'center', collapse = TRUE}
 plot(x = runif(200), y = runif(200), "p", pch = 16, cex = 4, 
-     col = adjustcolor(pal_unikn, alpha.f = .33))  # with transparency
+     col = usecol(pal_unikn, alpha = .33))  # with transparency
 ```
 
 2. Using the `ggplot` function of **ggplot2** for an area plot: 
