--- a/README.Rmd
+++ b/README.Rmd
@@ -23,15 +23,15 @@ knitr::opts_chunk$set(
 library(unikn)  # load package
 ```
 
-# unikn
+# unikn  <img src = "./inst/pix/unikn.png" align = "right" alt = "riskyr" width = "140" />
 
 <!-- unikn pkg logo and link: --> 
-<a href = "https://github.com/hneth/unikn/">
+<!-- <a href = "https://github.com/hneth/unikn/">
 <img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:10;"/>
-</a>
+</a> 
+-->
 
-The **unikn** package enables the use some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
-for users of [R](https://www.r-project.org/). 
+The **unikn** package enables the use some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design for users of [R](https://www.r-project.org/). 
 For instance, it provides a range of beautiful color palettes for scientific visualizations that are consistent with the [University of Konstanz](https://www.uni-konstanz.de/)'s [corporate design specifications](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/). 
 
 
@@ -62,12 +62,16 @@ Additional elements are added as they become available. Please use responsibly!
 
 ## Installation
 
+<!--
+
 The current release of **unikn** is available from [CRAN](https://CRAN.R-project.org/) at <https://CRAN.R-project.org/package=unikn>:
 
 ```{r install_CRAN, echo = TRUE, eval = FALSE}
 install.packages('unikn')  # install unikn from CRAN client
 library('unikn')           # load to use the package
 ```
+
+--> 
 
 The current development version can be installed from its [GitHub](https://github.com) repository at <https://github.com/hneth/unikn/>: 
 
