add examples for generalizing color scales and functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -62,16 +62,12 @@ Additional elements are added as they become available. Please use responsibly!
 
 ## Installation
 
-<!--
-
 The current release of **unikn** is available from [CRAN](https://CRAN.R-project.org/) at <https://CRAN.R-project.org/package=unikn>:
 
 ```{r install_CRAN, echo = TRUE, eval = FALSE}
 install.packages('unikn')  # install unikn from CRAN client
 library('unikn')           # load to use the package
 ```
-
---> 
 
 The current development version can be installed from its [GitHub](https://github.com) repository at <https://github.com/hneth/unikn/>: 
 
@@ -80,7 +76,6 @@ The current development version can be installed from its [GitHub](https://githu
 devtools::install_github('hneth/unikn')
 library('unikn')  # load to use the package
 ```
-
 
 ## Colors
 
@@ -99,7 +94,7 @@ The default color palette `pal_unikn` combines:
 
 This yields a symmetrical default color palette `pal_unikn` consisting of 11&nbsp;colors: 
 
-```{r pal_unikn, eval = TRUE, fig.align = 'center', fig.width = 8, fig.height = 6}
+```{r pal_unikn, eval = TRUE, fig.width = 8, fig.asp = .75, fig.align = 'center'}
 # Default color palette: ----- 
 # pal_unikn  # 11 default colors
 
@@ -193,7 +188,7 @@ seecol(pal_unikn_pref)
 
 When only a subset of a color palette are needed, the `seecol()` and `usecol()` functions provide a reasonable subset of a known ** unikn** color palette: 
 
-```{r pal_n, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r pal_n, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # All color palettes: ----- 
 seecol(n = 4)
 
@@ -212,7 +207,7 @@ Here are some examples of these functions in action:
 
 - Extending or reducing an existing color palette:
 
-```{r col_scale_1, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col_scale_1, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 seecol(pal_unikn, n = 21)  
 # seecol(pal_seeblau, n = 8)  # provides a subset of "good" colors
 ```
@@ -221,7 +216,7 @@ Note that reducing an **unikn** color palette selects a suitable subset of its c
 
 - Combining colors to create new color palettes (of arbitrary length): 
 
-```{r col_scale_2, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col_scale_2, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining colors: ----- 
 seecol(c(Seeblau, "white", Pinky), 11) 
 # seecol(c(Karpfenblau, Seeblau, "gold"), 10) 
@@ -229,7 +224,7 @@ seecol(c(Seeblau, "white", Pinky), 11)
 
 - Mixing and merging colors and color palettes into new color palettes: 
 
-```{r col_scale_3, eval = TRUE, out.width = "75%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col_scale_3, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining color palettes (and colors): ----- 
 seecol(c(rev(pal_petrol),  "white", pal_bordeaux), 11)
 # seecol(c(rev(pal_seeblau), "white", pal_pinky), 11)
@@ -296,7 +291,7 @@ image(z = cos(r^2) * exp(-r/6), col = usecol(c(pal_petrol, pal_seegruen), n = 10
 
 3. Using **unikn** in `ggplot` calls (using **ggplot2**):
 
-```{r use_pal_ggplot2, eval = FALSE, out.width = "75%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r use_pal_ggplot2, eval = FALSE, out.width = "67%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/ 
 
 # (1) Create data: ---- 
@@ -338,6 +333,105 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
 ```
 
 <img src = "./inst/pix/README-use_pal_ggplot2-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
+
+## Generalization 
+
+The color scales included in the **unikn** package are based on those used by our own institution (the [University of Konstanz](https://uni-konstanz.de), Germany). 
+However, the functionality provided by the package makes it easy and straightforward to define and use your own color schemes. 
+To illustrate this, here are two examples: 
+
+```{r Cardiff, echo = FALSE, eval = FALSE, fig.align = 'center', fig.width = 5, fig.height = 3}
+# Cardiff University, UK: 
+# ToDo. 
+```
+
+### [Max Planck Society](https://www.mpg.de/), Germany:
+<img src = "./inst/pix/logo_MPG.png" align = "right" alt = "MPG" width = "200px" style = "border:10;"/>
+
+The design principles specify the use of 2 primary colors: 
+
+- Green as Pantone 328: Using the PANTONE&trade; color finder at <https://www.pantone.com/color-finder/328-C> yields the following color values:
+
+    - RGB: `0 115 103`    
+    - HEX/HTML: `#007367`   
+    - CMYK: `100 10 61 38`  
+
+- Grey as Pantone 427: Using the PANTONE&trade; color finder at <https://www.pantone.com/color-finder/427-C> yields the following color values: 
+
+    - RGB: `208 211 212`  
+    - HEX/HTML: `#D0D3D4`   
+    - CMYK: `7 3 5 8`   
+
+```{r MPG_rgb, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+# Using RGB values: 
+pal_mpg <- data.frame(# named colors: 
+  "mpg_green" = rgb( 17, 102,  86, maxColorValue = 255),
+  "mpg_gray"  = rgb(221, 222, 214, maxColorValue = 255),
+  "mpg_grey"  = rgb(208, 211, 212, maxColorValue = 255)
+  )
+seecol(pal = list(pal_mpg))  # Ooops...
+```
+
+```{r MPG_hex, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+# Using HEX values:
+mpg_green <- "#007367"
+mpg_grey  <- "#D0D3D4"
+
+# col2rgb(mpg_green)
+# col2rgb(mpg_grey)
+
+pal_mpg <- usecol(pal = c(mpg_green, "white", mpg_grey))
+names(pal_mpg) <- c("mpg green", "white", "mpg grey")
+seecol(pal_mpg)
+```
+
+### [Princeton University](https://princeton.edu/), USA: 
+<img src = "./inst/pix/logo_princeton.jpg" align = "right" width = "200px" alt = "Princeton" style = "border:10;"/>
+
+The guide at <https://communications.princeton.edu/guides-tools/logo-graphic-identity> defines "Princeton Orange" as Pantone (PMS) 158 C.
+
+- The PANTONE&trade; color finder at <https://www.pantone.com/color-finder/158-C> yields the following color values:
+
+    - RGB: `232 119 34`  
+    - HEX/HTML: `#E87722`  
+    - CMYK: `0 62 95 0`  
+
+- However, the guide also distinguishes between 2 versions of orange and provides the following HEX/HTML values:  
+
+    - Orange on white: "#E77500"  
+    - Orange on black: "#F58025"  
+
+These definitions suggest defining 3 separate color palettes: 
+
+```{r Princeton, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+# Source: https://communications.princeton.edu/guides-tools/logo-graphic-identity 
+# e77500 is used on white and #f58025 on black.
+
+# Using HEX values: 
+orange_basic <- "#E87722"
+orange_white <- "#E77500"
+orange_black <- "#F58025"
+
+# Defining 3 color palettes:
+pal_princeton <- c(orange_basic, "black")
+names(pal_princeton) <- c("orange", "black")
+
+pal_princeton_1 <- c(orange_white, "white", "black")
+names(pal_princeton_1) <- c("orange_1", "white", "black")
+
+pal_princeton_2 <- usecol(pal = c(orange_black, "black", "white"))
+names(pal_princeton_2) <- c("orange_2", "black", "white")
+
+# View a palette: 
+seecol(pal_princeton_1)
+```
+
+The `seecol()` and `usecol()` functions allow comparing, scaling, and using these custom palettes in the same fashion as the native **unikn** color palettes: 
+
+```{r compare_custom_pals, out.width = "75%", fig.asp = .50, fig.align = 'center', collapse = TRUE}
+# Compare and extend custom color palettes:
+seecol(list(pal_unikn, pal_mpg, pal_princeton_1), n = 9)
+```
 
 ## Text decorations
 
