--- a/README.Rmd
+++ b/README.Rmd
@@ -31,31 +31,31 @@ library(unikn)  # load package
 </a> 
 -->
 
-The **unikn** package enables the use some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design for users of [R](https://www.r-project.org/). 
-For instance, it provides a range of beautiful color palettes for scientific visualizations that are consistent with the [University of Konstanz](https://www.uni-konstanz.de/)'s [corporate design specifications](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/colours-for-complex-graphics/). 
+The **unikn** package enables using some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design in [R](https://www.r-project.org/). 
+**unikn** currently provides a range of dedicated color palettes for scientific visualizations and defines styled text elements (e.g., for marking, underlining, or plotting colored titles) that are consistent with the official design specifications (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details). 
+Although the package is based on detailed specifications of a particular institution, its functionality can easily be adopted and extended for other purposes and institutions. 
 
+## Background 
 
-## Motivation 
-
-<!-- unikn CD: --> 
-
-In 2014, the [University of Konstanz](https://www.uni-konstanz.de/) introduced a highly recognizable corporate design. 
+Most major institutions devise corporate design (CD) manuals to create and maintain a consistent impression in presentations and publications. 
+For instance, the [University of Konstanz](https://www.uni-konstanz.de/) introduced a highly recognizable corporate design in 2014. 
 Its key component is the consistent use of a `Seeblau` color and a corresponding color palette that blends various shades of `Seeblau` (in boxes, lines, and other graphical elements) with text (in black-and-white). (See the official [brand information](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) and the 
 [Corporate Design Manual (pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf) for details.) 
 
 <!-- Goals of the unikn pgk: --> 
 
-The **unikn** package aims to facilitate the use of some design elements for users of [R](https://www.r-project.org/). 
-While the correct use of default specifications should be simple and straightforward, we also allow some flexibility for expert users (e.g., for creators of scientific visualizations). 
+The **unikn** package aims to facilitate the use of corporate design elements for users of [R](https://www.r-project.org/). 
+While the correct use of default specifications should be simple and straightforward, we leave some flexibility for expert users (e.g., for creators of scientific visualizations). 
 
 <!-- Overview: --> 
 
-The package currently provides 3 types of objects or functions:
+The package currently provides 4 types of objects or functions:
 
-1. Colors, color palettes, and related functions (e.g., `seecol()` and `usecol()`);  
-2. Plotting styled graphical objects (e.g., boxes and frames);  
-3. Plotting styled text elements (e.g., highlighting and underlining text).  
-<!-- 4. Graphical support (e.g., commands and themes for creating scientific visualizations). -->
+1. Dedicated colors and color palettes;  
+2. Functions for viewing and changing color palettes (e.g., `seecol()` and `usecol()`);  
+3. Functions for plotting graphical objects (e.g., boxes and frames);  
+4. Functions for plotting styled text elements (e.g., highlighting and underlining text).  
+<!-- 5. Graphical support (e.g., commands and themes for creating scientific visualizations). -->
 
 Additional elements are added as they become available. Please use responsibly! 
 
@@ -334,21 +334,98 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
 
 <img src = "./inst/pix/README-use_pal_ggplot2-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
 
-## Generalization 
+## Generalization to other institutions 
 
-The color scales included in the **unikn** package are based on those used by our own institution (the [University of Konstanz](https://uni-konstanz.de), Germany). 
+The color scales included in the **unikn** package are based on the CD manual of the [University of Konstanz](https://uni-konstanz.de), Germany. 
 However, the functionality provided by the package makes it easy and straightforward to define and use your own color schemes. 
-To illustrate this, here are two examples: 
+Here are some examples from other institutions to illustrate how this can be achieved.  
 
 ```{r Cardiff, echo = FALSE, eval = FALSE, fig.align = 'center', fig.width = 5, fig.height = 3}
 # Cardiff University, UK: 
 # ToDo. 
 ```
 
-### [Max Planck Society](https://www.mpg.de/), Germany:
+#### A. [University of Freiburg](https://www.uni-freiburg.de/), Germany: 
+<img src = "./inst/pix/logo_freiburg.png" align = "right" width = "150px" alt = "Uni Freiburg" style = "border:10;"/> 
+
+The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de/) provides fairly extensive information on its corporate color scheme (available [here](https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt) and [here](https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben)). 
+Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
+As the [University of Freiburg](https://www.uni-freiburg.de/) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
+
+```{r Freiburg, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+# Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
+
+pal_freiburg_bluered <- c("#004a99", "#c1002a")
+names(pal_freiburg_bluered) <- c("uni-blau", "uni-rot")
+
+pal_freiburg_basic <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
+names(pal_freiburg_basic) <- c("uni-blau", "weiss", "uni-rot")
+
+# Web colors: https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben  
+
+pal_freiburg_blue <- c("#004a99", "#2a6ebb", "#6f9ad3")
+names(pal_freiburg_blue) <- c("blue-1", "blue-2", "blue-3")
+
+pal_freiburg_grey <- c("#f2f3f1", "#e0e1dd", "#d5d6d2", "#c9cac8", 
+                       "#b2b4b3", "#9a9b9c", "#747678", "#363534")
+names(pal_freiburg_grey) <- c("grey-0", "grey-1", "grey-2", "grey-3", 
+                              "grey-5", "grey-7", "grey-9", "grey-font")
+
+pal_freiburg_info <- c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
+                       "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47")
+names(pal_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
+                              "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
+```
+
+Once a new color palette has been defined (and is available in your current R environment), we can use the `seecol()` and `usecol()` functions to view, modify, and use the palette: 
+
+```{r seecol_freiburg, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+seecol(pal_freiburg_info)            # view color palette
+# seecol(pal_freiburg_basic, n = 7)  # extend color palette
+# seecol(c(pal_freiburg_blue, "white", pal_freiburg_grey))  # mix color palette
+```
+
+#### B. [Princeton University](https://princeton.edu/), USA: 
+<img src = "./inst/pix/logo_princeton.jpg" align = "right" width = "200px" alt = "Princeton University" style = "border:10;"/>
+
+The color scheme of [Princeton University](https://princeton.edu/) is easily recognized by its combination of orange with black and white elements. The official guidelines (available [here](https://communications.princeton.edu/guides-tools/logo-graphic-identity)) define "Princeton Orange" as Pantone (PMS) 158&nbsp;C. 
+
+- The PANTONE&trade; color finder at <https://www.pantone.com/color-finder/158-C> yields the following color values:
+
+    - RGB: `232 119 34`  
+    - HEX/HTML: `#E87722`  
+    - CMYK: `0 62 95 0`  
+
+- However, the guide also specifies and distinguishes between 2 additional versions of orange and provides the following HEX/HTML values for them:  
+
+    - Orange on white: "#E77500"  
+    - Orange on black: "#F58025"  
+
+These definitions suggest defining 3 separate versions of orange and corresponding color palettes: 
+
+```{r Princeton, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+# HEX values for 3 shades of orange: 
+orange_basic <- "#E87722"  # Pantone 158 C
+orange_white <- "#E77500"  # orange on white
+orange_black <- "#F58025"  # orange on black
+
+# Defining color palettes:
+pal_princeton <- c(orange_basic, "black")
+names(pal_princeton) <- c("orange", "black")
+
+pal_princeton_1 <- c(orange_white, "white", "black")
+names(pal_princeton_1) <- c("orange_w", "white", "black")
+
+pal_princeton_2 <- c(pal = c(orange_black, "black", "white"))
+names(pal_princeton_2) <- c("orange_b", "black", "white")
+
+seecol(pal_princeton_1)  # view color palette
+```
+
+#### C. [Max Planck Society](https://www.mpg.de/), Germany: 
 <img src = "./inst/pix/logo_MPG.png" align = "right" alt = "MPG" width = "200px" style = "border:10;"/>
 
-The design principles specify the use of 2 primary colors: 
+The CD manual (available [here](https://docplayer.org/2328711-Max-planck-institut-das-erscheinungsbild-der-max-planck-gesellschaft-4-ueberarbeitete-auflage.html)) of the [Max Planck Society](https://www.mpg.de/) specifies the use of 2&nbsp;primary colors: 
 
 - Green as Pantone 328: Using the PANTONE&trade; color finder at <https://www.pantone.com/color-finder/328-C> yields the following color values:
 
@@ -372,7 +449,7 @@ pal_mpg <- data.frame(# named colors:
 seecol(pal = list(pal_mpg))  # Ooops...
 ```
 
-```{r MPG_hex, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r MPG_hex, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Using HEX values:
 mpg_green <- "#007367"
 mpg_grey  <- "#D0D3D4"
@@ -381,61 +458,36 @@ mpg_grey  <- "#D0D3D4"
 # col2rgb(mpg_grey)
 
 pal_mpg <- usecol(pal = c(mpg_green, "white", mpg_grey))
+```
+
+Again, the easiest way of defining a corresponding color palette is by creating a named vector. 
+To allow for better color gradients, we insert the color `"white"` between the 2&nbsp;dedicated colors: 
+
+```{r MPG_pal_def, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+pal_mpg <- c("#007367", "white", "#D0D3D4")
 names(pal_mpg) <- c("mpg green", "white", "mpg grey")
+```
+
+As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `pal_mpg` color palette: 
+
+```{r MPG_seecol, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 seecol(pal_mpg)
 ```
 
-### [Princeton University](https://princeton.edu/), USA: 
-<img src = "./inst/pix/logo_princeton.jpg" align = "right" width = "200px" alt = "Princeton" style = "border:10;"/>
+#### Comparing color palettes 
 
-The guide at <https://communications.princeton.edu/guides-tools/logo-graphic-identity> defines "Princeton Orange" as Pantone (PMS) 158 C.
-
-- The PANTONE&trade; color finder at <https://www.pantone.com/color-finder/158-C> yields the following color values:
-
-    - RGB: `232 119 34`  
-    - HEX/HTML: `#E87722`  
-    - CMYK: `0 62 95 0`  
-
-- However, the guide also distinguishes between 2 versions of orange and provides the following HEX/HTML values:  
-
-    - Orange on white: "#E77500"  
-    - Orange on black: "#F58025"  
-
-These definitions suggest defining 3 separate color palettes: 
-
-```{r Princeton, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
-# Source: https://communications.princeton.edu/guides-tools/logo-graphic-identity 
-# e77500 is used on white and #f58025 on black.
-
-# Using HEX values: 
-orange_basic <- "#E87722"
-orange_white <- "#E77500"
-orange_black <- "#F58025"
-
-# Defining 3 color palettes:
-pal_princeton <- c(orange_basic, "black")
-names(pal_princeton) <- c("orange", "black")
-
-pal_princeton_1 <- c(orange_white, "white", "black")
-names(pal_princeton_1) <- c("orange_1", "white", "black")
-
-pal_princeton_2 <- usecol(pal = c(orange_black, "black", "white"))
-names(pal_princeton_2) <- c("orange_2", "black", "white")
-
-# View a palette: 
-seecol(pal_princeton_1)
-```
-
-The `seecol()` and `usecol()` functions allow comparing, scaling, and using these custom palettes in the same fashion as the native **unikn** color palettes: 
+Once a new palette is defined (and available in your current R environment), the `seecol()` and `usecol()` functions allow comparing, scaling, and using them in the same fashion as the native **unikn** color palettes: 
 
 ```{r compare_custom_pals, out.width = "75%", fig.asp = .50, fig.align = 'center', collapse = TRUE}
 # Compare and extend custom color palettes:
-seecol(list(pal_unikn, pal_mpg, pal_princeton_1), n = 9)
+# seecol(list(pal_mpg, pal_princeton_1, pal_unikn))       # compare basic versions
+seecol(list(pal_mpg, pal_princeton_1, pal_unikn), n = 9)  # compare scaled versions
 ```
+
 
 ## Text decorations
 
-**unikn** also provides some functions for plotting graphical elements (like boxes) and styled text (with decorations like colored backgrounds or underlining). 
+Beyond color functions, **unikn** also provides some functions for plotting graphical elements (like boxes) and styled text (with decorations like colored backgrounds or underlining). 
 By default, the text-decoration functions assume that you want to add styled text to an existing plot, unless the `new_plot` argument specifies a type of plot to be generated. 
 As the use of these functions is explained in detail in `vignette("Text")`, we only provide some examples here: 
 
